--- a/web/src/app/add-material/add-material.component.html
+++ b/web/src/app/add-material/add-material.component.html
@@ -2,7 +2,16 @@
   <h1>Add Material</h1>
   <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" [formControl]="name" />
+    <!--
+      <input type="text" class="form-control" id="name" [formControl]="name" />
+    -->
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      [(ngModel)]="model.name"
+      name="name"
+    />
   </div>
   <button type="submit" class="btn btn-primary" (click)="newMaterial()">
     Add
