--- a/web/src/app/materials/materials.component.html
+++ b/web/src/app/materials/materials.component.html
@@ -1,15 +1,14 @@
-<div>
+<div class="m-3">
   <a href="/addmaterial">
     <fa-icon [icon]="faPlusCircle" class="fa-lg"></fa-icon>
     <span>Add New Material</span></a
   >
 </div>
 <div *ngIf="materials">
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered width">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Id</th>
+        <th scope="col">#</th> <th scope="col">Id</th>
         <th scope="col">
           Name
           <fa-icon
@@ -33,8 +32,7 @@
     <tbody>
       <tr *ngFor="let material of materials">
         <th scope="row">{{ materials.indexOf(material) + 1 }}</th>
-        <td>{{ material.id }}</td>
-        <td>{{ material.name }}</td>
+        <td>{{ material.id }}</td> <td>{{ material.name }}</td>
       </tr>
     </tbody>
   </table>
