--- a/web/src/app/recipes/recipes.component.html
+++ b/web/src/app/recipes/recipes.component.html
@@ -1,15 +1,14 @@
-<div>
+<div class="m-3">
   <a href="/addrecipe">
     <fa-icon [icon]="faPlusCircle" class="fa-lg"></fa-icon>
     <span>Add New Recipe</span></a
   >
 </div>
 <div *ngIf="recipes">
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered width">
     <thead class="table-dark">
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Id</th>
+        <th scope="col">#</th> <th scope="col">Id</th>
         <th scope="col">
           Title
           <fa-icon
@@ -70,8 +69,7 @@
       <tr *ngFor="let recipe of recipes">
         <th scope="row">{{ recipes.indexOf(recipe) + 1 }}</th>
         <td (click)="copy(recipe.id)" class="copyText">{{ recipe.id }}</td>
-        <td>{{ recipe.title }}</td>
-        <td>{{ recipe.description }}</td>
+        <td>{{ recipe.title }}</td> <td>{{ recipe.description }}</td>
         <td>{{ recipe.difficult }}</td>
       </tr>
     </tbody>
