Add material pagination

--- a/web/src/app/dashboard/dashboard.component.html
+++ b/web/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
   <a class="navbar-brand" routerLink="/recipes" routerLinkActive="active"
-    >Cook</a
-  >
+    >Cook
+  </a>
   <button
     class="navbar-toggler"
     type="button"
@@ -27,12 +27,14 @@
         >
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmit()">
       <input
         class="form-control mr-sm-2"
         type="search"
+        name="search"
         placeholder="Search"
         aria-label="Search"
+        [(ngModel)]="model.search"
       />
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
         Search
