--- a/web/src/app/materials/materials.component.html
+++ b/web/src/app/materials/materials.component.html
@@ -6,7 +6,7 @@
 </div>
 <div *ngIf="materials">
   <table class="table table-striped table-bordered width">
-    <thead class="thead-dark">
+    <thead>
       <tr>
         <th scope="col">#</th> <th scope="col">Id</th>
         <th scope="col">
@@ -31,9 +31,42 @@
     </thead>
     <tbody>
       <tr *ngFor="let material of materials">
-        <th scope="row">{{ materials.indexOf(material) + 1 }}</th>
+        <th scope="row">{{
+          materials.indexOf(material) + 1 + (currentPage - 1) * everyPageItem
+        }}</th>
         <td>{{ material.id }}</td> <td>{{ material.name }}</td>
       </tr>
     </tbody>
   </table>
+  <nav aria-label="Page Navigation">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [ngClass]="{ disabled: showPage[0] == 0 }">
+        <a
+          class="page-link"
+          (click)="changePage(-1)"
+          href="#"
+          aria-label="Previous"
+        >
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      <li
+        class="page-item"
+        *ngFor="let page of showPage.slice(1, -1)"
+        [ngClass]="{ active: page == currentPage }"
+      >
+        <a class="page-link" (click)="changePage(page)" href="#">{{ page }}</a>
+      </li>
+      <li
+        class="page-item"
+        [ngClass]="{ disabled: showPage.slice(-1)[0] == 0 }"
+      >
+        <a class="page-link" (click)="changePage(0)" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </div>
